--- a/pom.xml
+++ b/pom.xml
@@ -1,11 +1,11 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>com.ksapp</groupId>
-	<artifactId>ks</artifactId>
+	<groupId>com.dot</groupId>
+	<artifactId>dot</artifactId>
 	<version>1-SNAPSHOT</version>
 	<packaging>war</packaging>
-	<name>Web Application</name>
+	<name>Dot Web Application</name>
 	<description>Java Webapp</description>
 	<dependencies>
       <dependency>
@@ -50,7 +50,7 @@
 			<url>http://domain:port/content/repositories/releases</url>
 		</repository>
 		<snapshotRepository>
-			<id>deployment</id>
+			<id>nexus</id>
 			<name>snapshots</name>
 			<url>http://34.66.90.234:8081/repository/maven-snapshots/</url>
 		</snapshotRepository>
